--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Intro -->
         <article id="intro">
           <h2 class="major">Intro</h2>
-          <span class="image main"><img src="images/me.png" /></span>
+          <span class="image me"><img src="images/me.png" /></span>
             Hey everyone! </br>
             I'm Esther, a software engineering student deeply
             intrigued by the intersection of software engineering and data
